--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -43,7 +43,7 @@ securityContext: {}
 ## ref: https://kafka.apache.org/documentation/#configuration
 configurationOverrides:
   "offsets.topic.replication.factor": "1"
-  # "default.replication.factor": 3
+  "default.replication.factor": 1
   # "min.insync.replicas": 2
   # "auto.create.topics.enable": false
 
