--- a/values.yaml
+++ b/values.yaml
@@ -12,7 +12,7 @@ cp-zookeeper:
   #  - name: "regcred"
   heapOptions: "-Xms256M -Xmx256M"
   persistence:
-    enabled: true
+    enabled: false
     ## The size of the PersistentVolume to allocate to each Zookeeper Pod in the StatefulSet. For
     ## production servers this number should likely be much larger.
     ##
@@ -51,8 +51,8 @@ cp-kafka:
   #  - name: "regcred"
   heapOptions: "-Xms256M -Xmx256M"
   persistence:
-    enabled: true
-    storageClass: manual
+    enabled: false
+    # storageClass: ""
     size: 5Gi
     disksPerBroker: 1
   resources: {}
