--- a/charts/cp-kafka/templates/service.yaml
+++ b/charts/cp-kafka/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  type: NodePort
   ports:
     - port: 9092
       name: broker
