--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -135,7 +135,7 @@ prometheus:
     resources: {}
 
 nodeport:
-  enabled: false
+  enabled: true
   servicePort: 19092
   firstListenerPort: 31090
 
