--- a/charts/cp-schema-registry/values.yaml
+++ b/charts/cp-schema-registry/values.yaml
@@ -34,7 +34,8 @@ customEnv: {}
 servicePort: 8081
 
 ## Schema registry JVM Heap Option
-heapOptions: "-Xms512M -Xmx512M"
+#heapOptions: "-Xms512M -Xmx512M"
+heapOptions: "-Xms256M -Xmx256M"
 
 ## You can list load balanced service endpoint, or list of all brokers (which is hard in K8s).  e.g.:
 ## bootstrapServers: "PLAINTEXT://dozing-prawn-kafka-headless:9092"
