--- a/charts/cp-zookeeper/values.yaml
+++ b/charts/cp-zookeeper/values.yaml
@@ -53,7 +53,8 @@ autoPurgeSnapRetainCount: 3
 autoPurgePurgeInterval: 24
 
 ## Zookeeper JVM Heap Option
-heapOptions: "-Xms512M -Xmx512M"
+#heapOptions: "-Xms512M -Xmx512M"
+heapOptions: "-Xms256M -Xmx256M"
 
 ## Port
 ## ref: https://zookeeper.apache.org/doc/r3.4.10/zookeeperAdmin.html#sc_configuration
